adds styles to login and goals page

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,1 +1,8 @@
 @import "./styles/common/common.scss";
+
+@import "./styles/navigation/nav-bar.scss";
+
+@import "./styles/pages/login.scss";
+@import "./styles/pages/goals.scss";
+
+@import "./styles/goal-card.scss";
