adds functionality for goal logs and styles for goal logs page

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,5 +4,7 @@
 
 @import "./styles/pages/login.scss";
 @import "./styles/pages/goals.scss";
+@import "./styles/pages/goal-logs.scss";
 
 @import "./styles/goal-card.scss";
+@import "./styles/goal-log-card.scss";
