adds styles to edit goal, edit goal log, and confirm delete, adds user menu dropdown and link color functionality

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,3 +8,7 @@
 
 @import "./styles/goal-card.scss";
 @import "./styles/goal-log-card.scss";
+
+@import "./styles/forms/edit-goal.scss";
+@import "./styles/forms/edit-goal-log.scss";
+@import "./styles/forms/confirm-delete.scss";
