--- a/src/styles/goal-log-card.scss
+++ b/src/styles/goal-log-card.scss
@@ -14,6 +14,9 @@
 
     .goal-name {
       margin: 0;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     .edit-btn {
@@ -25,6 +28,8 @@
 
   .goal-description {
     height: 160px;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   .bottom {
