--- a/src/styles/navigation/nav-bar.scss
+++ b/src/styles/navigation/nav-bar.scss
@@ -11,25 +11,27 @@
     justify-content: space-around;
     align-items: center;
 
-    .link-wrapper {
-      // TODO: Add color to selected link-wrapper
-      // background-color: green;
-      // width: 135px;
-      // :not(:not(.navbar-container .links-wrapper .link-wrapper a.active)) {
-      // background-color: green;
-      // background-color: #a6bfd6;
-      // }
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: x-large;
+      text-decoration: none;
+      color: black;
+      font-weight: 600;
+      width: 100%;
+      height: 100%;
+    }
 
-      a {
-        font-size: x-large;
-        text-decoration: none;
-        color: black;
-        font-weight: 600;
+    .highlight-green {
+      &.active {
+        background-color: #619d72;
+      }
+    }
 
-        // &.active {
-        //   background-color: green;
-        //   width: 135px;
-        // }
+    .highlight-blue {
+      &.active {
+        background-color: #7091b0;
       }
     }
   }
@@ -39,5 +41,19 @@
     width: 162px;
     justify-content: space-evenly;
     align-items: center;
+
+    .user-menu {
+      background-color: white;
+      position: absolute;
+      top: 72px;
+      right: 20px;
+      width: 100px;
+      padding: 10px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+      .menu-option {
+        font-size: 16px;
+      }
+    }
   }
 }
