adds styles and search functionality for user and category modals, cleans up code

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,3 +12,5 @@
 @import "./styles/forms/edit-goal.scss";
 @import "./styles/forms/edit-goal-log.scss";
 @import "./styles/forms/confirm-delete.scss";
+@import "./styles/forms/user-selector.scss";
+@import "./styles/forms/category-selector.scss";
