adds logout fetch and color variables, cleans up code

--- a/src/styles/common/common.scss
+++ b/src/styles/common/common.scss
@@ -16,5 +16,5 @@ code {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #c2d4e6;
+  background-color: $very-light-blue;
 }
