--- a/src/styles/forms/user-selector.scss
+++ b/src/styles/forms/user-selector.scss
@@ -11,12 +11,14 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    z-index: 1;
 
     .close-btn {
       border: none;
       background: transparent;
       font-size: xx-large;
       padding: 0;
+      height: fit-content;
     }
   }
 
@@ -25,9 +27,9 @@
     height: 2.5em;
     padding: 2px 13px;
     border-radius: 5px;
-    border: 1px solid #676767;
+    border: 1px solid $gray;
     margin-bottom: 9%;
-    background-color: #d6ebff;
+    background-color: $white-blue;
 
     &:focus-visible {
       outline: none;
@@ -54,7 +56,7 @@
     }
 
     .selected {
-      background-color: #7091b0;
+      background-color: $metallic-blue;
     }
   }
 }
