--- a/src/styles/goal-card.scss
+++ b/src/styles/goal-card.scss
@@ -1,7 +1,7 @@
 .goal-card {
   display: flex;
   flex-direction: column;
-  background-color: #a6bfd6;
+  background-color: $light-blue;
   border-radius: 10px;
   margin: 30px 2%;
   padding: 20px;
@@ -39,7 +39,7 @@
 
     .start-goal-btn {
       border: none;
-      background-color: #619d72;
+      background-color: $green;
       padding: 0.5em 1em;
       border-radius: 0.4em;
       font-size: 16px;
