--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #a6bfd6;
+    background-color: $light-blue;
     height: 38%;
     width: 26%;
     border-radius: 7px;
@@ -47,7 +47,7 @@
         input {
           height: 40%;
           border-radius: 3px;
-          border: 1px solid #676767;
+          border: 1px solid $gray;
           margin: 5px 0px;
           padding: 0 10px;
         }
@@ -55,7 +55,7 @@
 
       .submit-btn {
         font-weight: 600;
-        background-color: #619d72;
+        background-color: $green;
         width: 100%;
         height: 14%;
         border-radius: 5px;
