--- a/src/styles/navigation/nav-bar.scss
+++ b/src/styles/navigation/nav-bar.scss
@@ -22,6 +22,11 @@
       font-weight: 600;
       width: 100%;
       height: 100%;
+
+      .logo {
+        width: 70px;
+        height: 70px;
+      }
     }
 
     .highlight-green {
@@ -63,6 +68,10 @@
       padding: 0 20px;
     }
 
+    .user-menu-arrow {
+      cursor: pointer;
+    }
+
     .user-menu {
       background-color: white;
       position: absolute;
@@ -74,6 +83,7 @@
 
       .menu-option {
         font-size: 16px;
+        cursor: pointer;
       }
     }
   }
