--- a/src/styles/pages/goals.scss
+++ b/src/styles/pages/goals.scss
@@ -19,5 +19,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0px 10%;
+
+    .empty-container-text {
+      width: 100%;
+      text-align: center;
+    }
   }
 }
