--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -5,14 +5,21 @@
   height: 100vh;
 
   .logo-wrapper {
-    height: 20%;
+    height: 25%;
     width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+
+    .logo {
+      width: 100px;
+      height: 100px;
+    }
 
     h1 {
-      font-size: 7vh;
+      font-size: 40px;
+      margin: 0;
     }
   }
 
@@ -46,6 +53,7 @@
 
         input {
           height: 40%;
+          background-color: $white-blue;
           border-radius: 3px;
           border: 1px solid $gray;
           margin: 5px 0px;
